--- a/assets/scss/variables-site/_colors.scss
+++ b/assets/scss/variables-site/_colors.scss
@@ -1,20 +1,30 @@
-$color__background-body: #fff;
-$color__background-screen: #f1f1f1;
-$color__background-hr: #ccc;
+$orange : #cc4b00;
+$yellow : #cc4b00;
+$light-blue: #006ef5;
+$blue: #004eae;
+$dark-blue: #013371;
+$light-gray: #cccccc;
+$gray: #767676;
+$dark-gray: #333333;
+$white: #ffffff;
+
+$color__background-body: $white;
+$color__background-screen: $white;
+$color__background-hr: $light-gray;
 $color__background-button: #e6e6e6;
-$color__background-pre: #eee;
-$color__background-ins: #fff9c0;
+$color__background-pre: $light-gray;
+$color__background-ins: $light-gray;
 
-$color__text-screen: #21759b;
-$color__text-input: #666;
-$color__text-input-focus: #111;
-$color__link: royalblue;
-$color__link-visited: purple;
-$color__link-hover: midnightblue;
-$color__text-main: #404040;
+$color__text-screen: $dark-gray;
+$color__text-input: $gray;
+$color__text-input-focus: $dark-gray;
+$color__link: $orange;
+$color__link-visited: $orange;
+$color__link-hover: darken($orange, 9%);
+$color__text-main: $dark-gray;
 
-$color__border-button: #ccc #ccc #bbb;
-$color__border-button-hover: #ccc #bbb #aaa;
-$color__border-button-focus: #aaa #bbb #bbb;
-$color__border-input: #ccc;
-$color__border-abbr: #666;
+$color__border-button: $light-gray;
+$color__border-button-hover: $light-gray;
+$color__border-button-focus: $light-gray;
+$color__border-input: $light-gray;
+$color__border-abbr: $gray;
