--- a/assets/scss/site/_site.scss
+++ b/assets/scss/site/_site.scss
@@ -1,5 +1,7 @@
-// @import "../layout/content-sidebar";
-// @import "../layout/sidebar-content";
+/*--------------------------------------------------------------
+## Global
+--------------------------------------------------------------*/
+@import "global";
 
 /*--------------------------------------------------------------
 ## Posts and pages
