--- a/assets/scss/navigation/_menus.scss
+++ b/assets/scss/navigation/_menus.scss
@@ -1,12 +1,32 @@
+
+
 .main-navigation {
+	@include clearfix;
 	display: block;
 	width: 100%;
+	background-color: $blue;
+	border-color: $white;
+	border-style: solid;
+	border-width: 2px 2px 0;
+
+	.nav-menu {
+		@include clearfix;
+	}
 
 	ul {
 		display: none;
 		list-style: none;
 		margin: 0;
 		padding-left: 0;
+
+		.menu-item a {
+			padding: $gutter;
+		}
+
+		.menu-item a:hover,
+		.menu-item a:active {
+			background-color: $dark-blue;
+		}
 
 		ul {
 			box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
@@ -26,10 +46,6 @@
 				&.focus > ul {
 					left: 100%;
 				}
-			}
-
-			a {
-				width: 200px;
 			}
 
 			:hover > a,
@@ -69,19 +85,26 @@
 }
 
 /* Small menu. */
+/* TODO build mobile flyout */
 .menu-toggle,
 .main-navigation.toggled ul {
-	display: block;
+	// display: block;
 }
 
+.menu-toggle {
+	/* TODO: enable mobile toggle */;
+	display: none;
 
-
-@media screen and (min-width: 37.5em) {
-	.menu-toggle {
+	@include breakpoint(m) {
 		display: none;
 	}
-	.main-navigation ul {
-		display: block;
+}
+
+.main-navigation ul {
+	// display: none;
+
+	@include breakpoint(m) {
+		// display: block;
 	}
 }
 
