--- a/assets/scss/navigation/_menus.scss
+++ b/assets/scss/navigation/_menus.scss
@@ -1,5 +1,4 @@
 
-
 .main-navigation {
 	@include clearfix;
 	display: block;
@@ -10,7 +9,19 @@
 	border-width: 2px 2px 0;
 
 	.nav-menu {
-		@include clearfix;
+		/* mobile menu */
+		display: none;
+
+		@include breakpoint(m) {
+			/* full menu */
+			@include clearfix;
+		}
+	}
+
+	&.toggled {
+		ul {
+			@include clearfix;
+		}
 	}
 
 	ul {
@@ -18,6 +29,14 @@
 		list-style: none;
 		margin: 0;
 		padding-left: 0;
+
+		.menu-item {
+			float: none;
+
+			@include breakpoint(m) {
+				float: left;
+			}
+		}
 
 		.menu-item a {
 			padding: $gutter;
@@ -35,6 +54,11 @@
 			top: 100%;
 			left: -999em;
 			z-index: 99999;
+
+			/* no sub-menus for now */
+			&.sub-menu {
+				display: none;
+			}
 
 			ul {
 				left: -999em;
@@ -84,27 +108,11 @@
 	}
 }
 
-/* Small menu. */
-/* TODO build mobile flyout */
-.menu-toggle,
-.main-navigation.toggled ul {
-	// display: block;
-}
-
 .menu-toggle {
-	/* TODO: enable mobile toggle */;
-	display: none;
+	display: block;
 
 	@include breakpoint(m) {
 		display: none;
-	}
-}
-
-.main-navigation ul {
-	// display: none;
-
-	@include breakpoint(m) {
-		// display: block;
 	}
 }
 
