--- a/assets/scss/navigation/_menus.scss
+++ b/assets/scss/navigation/_menus.scss
@@ -3,6 +3,7 @@
 	@include clearfix;
 	display: block;
 	width: 100%;
+	position: relative;
 	background-color: $blue;
 	border-color: $white;
 	border-style: solid;
@@ -11,6 +12,7 @@
 	.nav-menu {
 		/* mobile menu */
 		display: none;
+		width: 100%;
 
 		@include breakpoint(m) {
 			/* full menu */
@@ -19,16 +21,24 @@
 	}
 
 	&.toggled {
-		ul {
+		.nav-menu {
 			@include clearfix;
+			display: block;
 		}
 	}
 
 	ul {
 		display: none;
-		list-style: none;
+		position: absolute;
+		z-index: 99999;
 		margin: 0;
 		padding-left: 0;
+		background-color: $blue;
+		list-style: none;
+
+		@include breakpoint(m) {
+			position: static;
+		}
 
 		.menu-item {
 			float: none;
@@ -110,9 +120,27 @@
 
 .menu-toggle {
 	display: block;
+	position: absolute;
+	left: 0;
+	bottom: -100%;
+	background-color: transparent;
+	background-image: svg-load('./../images/menu.svg', fill=#{$white});
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
+	border: none;
+	border-radius: 0;
+	overflow: hidden;
+	height: #{$spacer * 12};
+	width: #{$spacer * 12};
+	text-indent: -999px;
 
 	@include breakpoint(m) {
 		display: none;
+	}
+
+	.toggled & {
+		background-color: $blue;
+		background-image: svg-load('./../images/close.svg', fill=#{$white});
 	}
 }
 
